istio_components/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: services-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "192.168.64.14"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: services
spec:
  hosts:
  - "192.168.64.14" 
  gateways:
  - services-gateway
  http:
  # - match:
  #   - uri:
  #       exact: /svc-a
  #   - uri:
  #       exact: /svc-b
    # - uri:
    #     exact: /logout
    # - uri:
    #     prefix: /api/v1/products
  - route: 
    - destination:
        host: servicea.default.svc.cluster.local
        port:
          number: 5000
  # - route: 
  #   - destination:
  #       host: servicea.default.svc.cluster.local
  #       port:
  #         number: 5000
